avant ajout table

--- a/templates/backoffice/add_module.html.twig
+++ b/templates/backoffice/add_module.html.twig
@@ -24,7 +24,7 @@
                 </select>
             </div>
         </div>
-        <button type="submit" class="btn btn-outline-primary mt-4">Enregistrer ce nouveau prof</button>
+        <button type="submit" class="btn btn-outline-primary mt-4">Enregistrer ce nouveau module</button>
     </form>
 
 
