--- a/templates/backoffice/add_module.html.twig
+++ b/templates/backoffice/add_module.html.twig
@@ -12,6 +12,10 @@
             <label for="formGroupExampleInput">Nom :</label>
             <input name="name" type="text" class="form-control">
         </div>
+        <div class="form-group">
+            <label for="formGroupExampleInput">Semestre :</label>
+            <input name="semester" type="text" class="form-control">
+        </div>
 
         <div class="form-group row">
             <label class="col-2 col-form-label">Professeur(s) :</label>
@@ -19,6 +23,14 @@
                 <select name="teacher[]" class="custom-select" multiple>
                     {% for teacher in teachers %}
                     <option value="{{ teacher.id }}">{{ teacher.name }}
+                    </option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="col-8">
+                <select name="year" class="custom-select" multiple>
+                    {% for year in years %}
+                    <option value="{{ year.id }}">{{ year.year }}
                     </option>
                     {% endfor %}
                 </select>
